[package]
name = "win-local-tts"
version = "1.0.0"
description = "Windows 本地文字转语音工具"
authors = ["Evan"]
edition = "2021"

[lib]
name = "win_local_tts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
dirs = "5.0"